# avm

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  amr.txt  analysis.md  gpt4.md  mao_theory.md  plan.md  serialization.md  Отображение в ТМ.txt
.github/workflows/: ci.yml
3p/: UnitedMemoryLinks.h  doublets_ffi.dll.lib
cmake/: run_test.cmake
experiments/: debug_string.cpp  debug_structure.cpp
include/: anumber.h  avm.h  json_io.h
src/: main.cpp
test/: .gitignore  array.json  expr_and.json  expr_def_call_identity.json  expr_def_call_not.json  expr_def_call_recursive.json  expr_eq.json  expr_if_false.json  expr_if_nested.json  expr_if_true.json  expr_implies.json  expr_nand.json  expr_nested.json  expr_nor.json  expr_not.json  expr_or.json  expr_xor.json  nulls.json  number.json  res.json  root.json  strings.json  test.bat  text.json  text2.json  unit_test.cpp
test/src/: test_anumber.cpp
